Implementacja FixedSizeList